tests/NormalTests/paczka1/fuzzy1/80918391.err
Error in line 8: A427 S38 85,77
Error in line 12: lRYMzP89AvK A633 65,4
Error in line 19: lRYMzP89AvK A427 78,43
Error in line 24: lRYMzP89AvK A427 67,7
Error in line 28: lRYMzP89AvK A633 17,2
Error in line 35: 6P8QV A633 53,7
Error in line 37: prhQdPwVQb A300 26,9
